--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                             <div class="form-group">
                                                 <label class="col-sm-3 control-label">对手方</label>
                                                 <div class="col-sm-8">
-                                                    <input style="width:365px;" type="text" class="form-control" placeholder="对手方机构" id='entityName'>
+                                                    <input type="text" class="form-control" placeholder="对手方机构" id='entityName' data-provide="typeahead">
                                                 </div>
                                             </div>
                                             <div class="form-group">
@@ -179,20 +179,23 @@
         <script src="jquery.min.js"></script>
         <script src="bootstrap.min.js"></script>
         <script src="typeahead.js"></script>
-        <script src="typeahead.bundle.js"></script>
-        <script src="typeahead.bundle.min.js"></script>
-        <script src="typeahead.jquery.js"></script>
-        <script src="typeahead.jquery.min.js"></script>
+
 
         <script>
-        $('#entityName').typeahead({
-            minLength: 1,
-            highlight: true
-        },
-        {
-            name: 'my-dataset',
-            source: ['wang', 'www', 'wh']
-        });
+        $("#entityName").typeahead({
+            items: 8,
+            source: function(query, process){
+                console.log(query);
+                $.get('./search', {entyDesc:query}, function(data){
+                    console.log(data);
+                    process(data);
+                });
+            },
+            matcher:function(item){
+                return true;
+            },
+            delay: 500
+        })
         </script>
 
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
