--- a/index.html
+++ b/index.html
@@ -76,20 +76,19 @@
                                             <div class="form-group">
                                                 <label for="lastname" class="col-sm-3 control-label">交易员</label>
                                                 <div class="col-sm-8">
-                                                    <select class="form-control"><option></option></select>
+                                                    <select class="form-control" id="userList"></select>
                                                 </div>
                                             </div>
                                             <div class="form-group">
                                                 <label for="firstname" class="col-sm-3 control-label">债券代码</label>
                                                 <div class="col-sm-8">
-                                                    <input type="text" class="form-control" id="firstname"
-                                                    placeholder="债券代码">
+                                                    <input type="text" class="form-control" id="assetCode" placeholder="债券代码">
                                                 </div>
                                             </div>
                                             <div class="form-group">
                                                 <label for="firstname" class="col-sm-3 control-label">债券名称</label>
                                                 <div class="col-sm-8">
-                                                    <input type="text" class="form-control" id="firstname"
+                                                    <input type="text" class="form-control" id="assetName"
                                                     placeholder="债券名称">
                                                 </div>
                                             </div>
@@ -182,20 +181,70 @@
 
 
         <script>
+        var entyDescSrnoMap = {};
+        var assetDescSrnoMap = {};
+        var userArray = [];
         $("#entityName").typeahead({
-            items: 8,
+            items: 12,
             source: function(query, process){
                 console.log(query);
+                userArray = [];
+                $("#userList").empty();
+
                 $.get('./search', {entyDesc:query}, function(data){
                     console.log(data);
-                    process(data);
+                    entyDescSrnoMap = {};
+                    var entyDescArray = [];
+                    data.forEach(function(e){
+                        e = JSON.parse(e);
+                        entyDescArray.push(e.desc);
+                        entyDescSrnoMap[e.desc] = e.entySrno;
+                    });
+                    process(entyDescArray);
                 });
             },
             matcher:function(item){
                 return true;
             },
+            afterSelect: function (item) {
+                console.log(entyDescSrnoMap[item]);//取出选中的机构序列号
+
+                $.get('./entyUser', {entySrno:entyDescSrnoMap[item]}, function(data){
+                    console.log(data);
+                    data.forEach(function(user){
+                        $("#userList").append("<option>"+user.userDesc+"</option>")
+                    });
+                });
+            },
             delay: 500
-        })
+        });
+
+        $("#assetName").typeahead({
+            items: 12,
+            source: function(query, process){
+                console.log(query);
+                $("#assetCode").val('');
+                $.get('./search', {assetDesc:query}, function(data){
+                    console.log(data);
+                    var assetDescArray = [];
+                    data.forEach(function(e){
+                        e = JSON.parse(e);
+                        assetDescArray.push(e.desc);
+                        assetDescSrnoMap[e.desc] = e.assetCode;
+                    });
+                    process(assetDescArray);
+                });
+            },
+            afterSelect: function (item) {
+                //获取债券代码
+                console.log(assetDescSrnoMap[item]);
+                $("#assetCode").val(assetDescSrnoMap[item]);
+            },
+            matcher:function(item){
+                return true;
+            },
+            delay: 500
+        });
         </script>
 
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
